--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>This is the demo page</h1>
+    <p>This is the branch made by developer1</p>
+    <p>Changes has been made in the file</p>
 </body>
 </html>
