Third Release by dev1

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is the demo page</h1>
     <p>This is the branch made by developer1</p>
     <p>Changes has been made in the file</p>
+    <p>Added few more changes in the code base</p>
 </body>
 </html>
