Update Third release by dev1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is the demo page</h1>
+    <h2>Changes made by Developer 1</h2>
     <p>This is the branch made by developer1</p>
     <p>Changes has been made in the file</p>
     <p>Added few more changes in the code base</p>
