--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is the demo page</h1>
     <h2>Added changes</h2>
     <h3>Added few more changes</h3>
+    <h4>changes made by developer 2</h4>
 </body>
 </html>
